<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context="info.hernanramirez.formulariocontacto.ConfirmarDatosActivity">

    <ImageView
        android:src="@drawable/logo_user"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/tamano_titulo"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto_nombre"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/top"
        android:textSize="@dimen/tamano_nombre"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/lblFechaNaciomiento"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_fecha_nac"
            />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_fecha_nac"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
       >

        <TextView
            android:id="@+id/lblTelefono"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_telefono"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_telefono"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/lblEmail"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_email"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_email"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <TextView
            android:id="@+id/lblDescripcion"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_descripcion"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto_descripcion"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top"
        android:text="@string/boton_editar"/>




</LinearLayout>
